PZS-NG CHANGELOG
----------------

v1.0.8  --> 1.0.X  :
		- some new avinfo settings added.
		- New vars in dzsbot.vars: %video_width %video_height %video_fps %video_aspect
		                           %video_type_long %video_type_short %video_audio_hz
		                           %video_audio_channels %video_audio_name
		                           %video_audio_code
		- do not show subdir on !new (showlog binary).
		- more compat with wzdftpd added.
		- added some more mp3 settings.
		- new vars in dzsbot.vars: %vbr_quality %vbr_minimum_bitrate %vbr_noiseshaping
		                           %vbr_stereomode %vbr_unwise %vbr_source
		- disable allow message_file_name if set to "".
		- fixed a cleanup bug when zipfile integrity failed.
		- added support for hiding affils.
		- maziah fixed nfs.zst themefile.
		- added debug output in audiosort-bin and in createlink().
		- psxc-imdb v2.7i.
		- zyrex noticed a typo in stat announce - changed 'mB' to 'MB'.
		- small bug in psxc-imdb.tcl was fixed - resulted in it not working in
		  certain instances.
		- fixed bug with zip_clean only having effect on first uploaded zipfile.

v1.0.7  --> 1.0.8  : (r2252)
		- added support for vbr-old/vbr-new.
		- added more options to zsconfig - error msgs and benchmark output.
		- fix a bug in rescan when scanning new (not previously scanned) dirs.
		- fix a bug with rescan in 'quick' mode.
		- added '2007' and removed '2003' from list of allowed years in mp3.
		- on mp3 group-sort internal releases will not be renamed - only the
		  groupdir will.
		- the zipscript will no longer announce a release twice - dupe uploads
		  will be marked correctly, but no (normal) announce will happen in
		  glftpd.log.
		- added new variable/announce in bot on dupe releaseupload.
		- fixed bug on sfv creation/rescanning when case in sfv does not match
		  case of files.
v1.0.6  --> 1.0.7  : (r2230)
		- updated libcopy to v1.2 - fix for openbsd4.0.
		- added support for not sorting audio in certain dirs.