@@ -141,6 +141,7 @@ set variables(UPDATE_RAR)                   "%pf %u_name %g_name %t_files %u_spe
 set variables(UPDATE_VBR)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %genre %year %bitrate %sampling %mode %audio %a_stream %a_version %artist %album %title %codec %layer %vbr_oldnew %vbr_quality %vbr_minimum_bitrate %vbr_noiseshaping %vbr_stereomode %vbr_unwise %vbr_source %t_timeleft"
 set variables(UPDATE_VIDEO)                 "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %t_timeleft %video_width %video_height %video_fps %video_aspect %video_type_long %video_type_short %video_audio_hz %video_audio_channels %video_audio_name %video_audio_code"
 set variables(UPDATE_ZIP)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %t_timeleft"
+set variables(SAMPLEDIR)                       "%pf %u_name %g_name %video_width %video_height %video_fps %video_aspect %video_type_long %video_type_short %video_audio_hz %video_audio_channels %video_audio_name %video_audio_code"
 
 ## Converts empty or zero variable to something else if defined
 #
